# pod-rs

./: .travis.yml  Cargo.toml  README.md  search-index.js
implementors/pod/: trait.PodReadExt.js
pod/: index.html  sidebar-items.js  trait.Pod.html  trait.PodReadExt.html  trait.PodWriteExt.html
pod/io/: sidebar-items.js  trait.PodReadExt.html  trait.PodWriteExt.html
src/: code.rs  codec.rs  endian.rs  io.rs  lib.rs  pod.rs
src/pod/src/: io.rs.html  lib.rs.html  pod.rs.html
tests/: test.rs
