[package]
name = "pod"
version = "0.3.1"
authors = ["arcnmx"]

description = "Plain Old Data (POD) encoding and I/O"
keywords = ["nue", "pod", "data", "encode", "endian"]

documentation = "http://arcnmx.github.io/pod-rs/pod/"
repository = "https://github.com/arcnmx/pos-rs"
readme = "README.md"
license = "MIT"

[dependencies]
byteorder = "^0.5.3"
packed = "^0.4.0"
uninitialized = "^0.0.2"
